syntax = "proto3";
option java_multiple_files = true;
package com.searchproject.pubmed.grpc;
import "SearchRequest.proto";

message QueryRequest {
    string query = 1;
}

message QueryResponse {
    string response = 1;
}

service SearchService {
    rpc searchQuery(QueryRequest) returns (QueryResponse);
    rpc searchAid(QueryRequest) returns (QueryResponse);
}